--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -10,9 +10,9 @@
 
       <div class="modal-container2">
         <div class="modal2 modal-close2">
-          <img src="images/modal2.svg" alt="">
+          <img src="images/logoba.svg" alt="">
           <div class="modal-textos2">
-            <h2>Lo siento debes ser mayor de edad</h2>
+            <h2>LO SIENTO DEBES SER MAYOR DE EDAD</h2>
           </div>
 
         </div>
@@ -23,9 +23,9 @@
         <div class="modal modal-close">
           <p class="close2">X</p>
           <p class="acept">Soy mayor de Edad</p>
-          <img src="images/modal1.svg" alt="">
+          <img src="images/logoba.svg" alt="">
           <div class="modal-textos">
-            <h2>Bienvenido a Eclipse Web Site</h2>
+            <h2>BIENVENIDO</h2>
             <p>Disfruta con responsabilidad</p>
           </div>
 
