--- a/site/public/stylesheets/modal.css
+++ b/site/public/stylesheets/modal.css
@@ -8,8 +8,8 @@
     top: 0;
     left:0;
     background-position: center;
-   /* background-color: rgba(0, 0, 0, .7);*/
-   background-image   : url('../images/fondo5.jpg');
+   background-color: rgba(0, 0, 0, .7);
+   /*background-image   : url('../images/fondo5.jpg');*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,7 +18,7 @@
   .modal {
     width: 60%;
     height: 60%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(235 244 249 / 95%);
     text-align: center;
     display: flex;
     flex-direction:column ;
@@ -32,7 +32,7 @@
   }
 
   .acept {
-    padding: 2px;
+    padding: 5px;
     margin: 10px 0;
     position: absolute;
     bottom: 2px;
@@ -40,17 +40,20 @@
     display: inline-block;
     /*width: 25%;
     height: 5vh;*/
-    background-color: #0980bf;
+    background-color: #004056;
     color: var(--color-gris);
     line-height: 25px;
     cursor: pointer;
     border-radius: 5px;
     transition: all 0.3s ease-in;
+    border: 2px solid white;
+
       }
   
     .acept:hover {
       background-color: var(--color-gris);
-      color: #0980bf;
+      color: #004056;
+      border: 2px solid #004056;
       }
   
   .close2 {
@@ -76,18 +79,21 @@
   }
   
   .modal-textos > h2 {
-    color: var(--color-gris);
+    color: var(--color-grisos);
+    font-family: 'Roboto';
   
   }
   .modal-textos > p {
-    color:#D8CF04;
+    color: #004056;
+    margin-bottom: 30px;
+    font-family: 'Roboto';
 
   
   }
   
   
   .modal > img{
-    height: 30%;
+    height: 40%;
   }
   
 
