--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -72,7 +72,7 @@
           <ul class="usuario navbar-nav ml-auto">
             <div class="icons-nav">
 
-              <li><a href=""><i class="far fa-user"></i>Ingreso/Registro</a></li>
+              <li><a href="/ingreso"><i class="far fa-user"></i>Ingreso/Registro</a></li>
               <li><a href=""><i class="fas fa-search"></i>Buscar</a></li>
               <li><a href=""><i class="fas fa-shopping-cart"></i>Carrito</a></li>
             </div>
