--- a/site/public/stylesheets/users.css
+++ b/site/public/stylesheets/users.css
@@ -1,5 +1,6 @@
 
 
+
 .container-register-login {
   width: 100%;
     display: flex;
@@ -86,8 +87,7 @@
   color: #2196f3;
 }
 
-.group-register input:focus~label,
-input:valid~label {
+.group-register input:focus~label, .group-register input:valid~label {
   top: -14px;
   font-size: 12px;
   color: #2196f3;
@@ -157,7 +157,21 @@ left: 0;
   pointer-events: none;
 }
 
-.group-register > a {
+.error-credenciales {
+  margin: 30px auto;
+  background-color: rgba(255, 0, 0, 0.103);
+  width: 60%;
+  border: 1px solid red;
+  text-align: center;
+  border-radius: 5px;
+  padding: 2px;
+}
+.group-register-2{
+  
+  margin: 0 20px;
+    padding: 0 20px;
+}
+.group-register-2 > a {
   width: 100%;
   text-emphasis: none;
   text-decoration: none;
@@ -165,15 +179,32 @@ left: 0;
   transition: all 0.3s ease-in-out;
 }
 
-.group-register > a:hover {
+.group-register-2 > a:hover {
   color: #2196f3;
 
 }
 
 .error-msg-register{
-  color: var(--color-rosa);
+  color:red;
 font-size: 12px;
 }
+.span-error-credenciales {
+  color:red;
+font-size: 16px;
+}
+
+
+.input-login-checkbox {
+  width: 30px;
+  display: inline-flex;
+}
+
+.label-login-checkbox{
+top: 0px;
+ font-size: 16px;
+ padding-top: 10px
+}
+
 
 
 
