--- a/site/views/partials/footer.ejs
+++ b/site/views/partials/footer.ejs
@@ -11,9 +11,9 @@
           <li>Vinos Blancos</li>
         </a>
         <a href="">
-          <li>Espumantes</li>
+          <li>Ofertas</li>
         </a>
-        <a href="">
+        <a href="pages/medios-de-pago">
           <li>Medios de Pago</li>
         </a>
         <a href="">
@@ -28,16 +28,16 @@
     <nav class="col-5 centro-de-ayuda">
       <h4>Centro de Ayuda</h4>
       <ul>
-        <a href="">
+        <a href="https://www.andreani.com/#!/personas">
           <li>Seguimiento de Envíos</li>
         </a>
         <a href="">
           <li>Preguntas Frecuentes</li>
         </a>
         <a href="">
-          <li>Dejanos tu mensaje</li>
+          <li>Contacto</li>
         </a>
-        <a href="">
+        <a href="https://seguimiento.andreani.com/">
           <li>Estado del pedido</li>
         </a>
       </ul>
