--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -10,6 +10,7 @@
 @import 'modal.css';
 @import 'modal2.css';
 @import 'spinner.css';
+@import 'pages/medios.css';
 /*VARIABLES*/
 
 :root {
@@ -22,6 +23,7 @@
   --color-rojo   : #D90429;
   --color-rosa   : #EF233C;
   --color-violeta: #631224;
+--color-celeste: #2196f3;
   --fuente       : 'Lato';
 }
 
@@ -44,9 +46,11 @@
 }
 
 body {
+background-color: var(--color-grisos);
+  
   background: #0F2027;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to left #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to left, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: -webkit-linear-gradient(to left #101118, #08080c);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #101118, #08080c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   /*background-color: var(--color-grisos);*/
   color           : var(--color-gris);
