agrego dos paginas mas del footer

--- a/site/views/medios.ejs
+++ b/site/views/medios.ejs
@@ -22,13 +22,13 @@
                         <li><a href="https://www.andreani.com/#!/personas">Seguimiento de Envios</a></li>
                         <li><a href="/pages/preguntas-frecuentes">Preguntas Frecuentes</a></li>
                         <li><a href="https://seguimiento.andreani.com">Estado del Pedido</a></li>
-                        <li><a href="http://www.enzobianchi.com/arg/html/website/">Catálogo Online 2018</a></li>
+
                     </ul>
                     <ul>
                         <h3>Legales</h3>
-                        <li><a href="/pages/certificaciones-iso">Certificaciones ISO</a></li>
+
                         <li><a href="/pages/terminos-y-condiciones">Términos y Condiciones</a></li>
-                    </ul>                 
+                    </ul>
                 </div>
 
 
@@ -40,23 +40,23 @@
                     <h4>Formas de financiación con tarjeta</h4>
                     <p>Ingresas los datos de tu tarjeta de crédito al pagar y listo. La próxima vez que quieras usar
                         esta tarjeta, solo te pediremos el código de seguridad.</p>
-                    <p><img src="https://cdn.shopify.com/s/files/1/0005/4634/0925/files/Pagos-con-tarjeta-de-Credito.jpg?v=1530299059"
+                    <p><img src="/images/pages/tarjetas1.webp"
                             alt=""></p>
                     <ul>
                         <li>Promociones Bancarias de Cuotas sin interés vigentes - <a
-                                href="https://www.mercadopago.com.ar/cuotas" target="_blank" title="Cuotas MercadoPago"
-                                >Ingrese Aquí</a>
+                                href="https://www.mercadopago.com.ar/cuotas" target="_blank"
+                                title="Cuotas MercadoPago">Ingrese Aquí</a>
                         </li>
                     </ul>
                     <h3>Opción 2: Tarjeta de Débito</h3>
                     <p>Ingresas los datos completos una sola vez y en futuras compras solo te pediremos el código de
                         seguridad.</p>
-                    <p><img src="//cdn.shopify.com/s/files/1/0005/4634/0925/files/Pagos-con-tarjeta-de-Debito.jpg?v=1530299074"
+                    <p><img src="/images/pages/tarjetas2.webp"
                             alt=""></p>
                     <h3>Opción 3: Efectivo en Puntos de Pago</h3>
                     <p>Al momento de pagar te diremos cómo hacerlo y dónde ir. Nada de ir a bancos y hacer largas colas,
                         ¡verás que es muy simple!</p>
-                    <p><img src="//cdn.shopify.com/s/files/1/0005/4634/0925/files/Pagos-en-Efectivo.jpg?v=1530299089"
+                    <p><img src="/images/pages/tarjetas3.webp"
                             alt=""></p>
                     <h3>DEVOLUCIONES DE DINERO</h3>
                     <p>Sabemos que en ocasiones las cosas no salen como uno espera. Lo bueno es que la mayoría de las
@@ -86,25 +86,8 @@
                     </p>
 
                 </div>
-    
-</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div>
 
 
 
