--- a/site/views/partials/footer.ejs
+++ b/site/views/partials/footer.ejs
@@ -13,13 +13,13 @@
         <a href="">
           <li>Ofertas</li>
         </a>
-        <a href="pages/medios-de-pago">
+        <a href="/pages/medios-de-pago">
           <li>Medios de Pago</li>
         </a>
-        <a href="">
+        <a href="/pages/costos-de-envio">
           <li>Costos de Envio</li>
         </a>
-        <a href="">
+        <a href="/pages/tiempos-de-envio">
           <li>Tiempos de Envio</li>
         </a>
       </ul>
