--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -82,19 +82,19 @@
           <article class="col-12 col-md-4 bordes-derechos">
             <i class="fas fa-shipping-fast"></i>
             <h4>ENVIOS GRATIS A TODO EL PAIS</h4>
-            <a href="">VER MEDIOS DE ENVIO</a>
+            <a href="/pages/costos-de-envio">VER MEDIOS DE ENVIO</a>
           </article>
 
           <article class="col-12 col-md-4 bordes-derechos">
             <i class="fas fa-credit-card"></i>
             <h4>TARJETAS DE CREDITO Y DEBITO</h4>
-            <a href="">VER MEDIOS DE PAGO</a>
+            <a href="/pages/medios-de-pago">VER MEDIOS DE PAGO</a>
           </article>
 
           <article class="col-12 col-md-4">
             <i class="far fa-clock"></i>
             <h4>TIEMPOS DE ENVIO</h4>
-            <a href="">VER TIEMPOS DE ENVIO</a>
+            <a href="/pages/tiempos-de-envio">VER TIEMPOS DE ENVIO</a>
           </article>
         </div>
       </section>
