--- a/site/views/medios.ejs
+++ b/site/views/medios.ejs
@@ -22,6 +22,7 @@
                         <li><a href="https://www.andreani.com/#!/personas">Seguimiento de Envios</a></li>
                         <li><a href="/pages/preguntas-frecuentes">Preguntas Frecuentes</a></li>
                         <li><a href="https://seguimiento.andreani.com">Estado del Pedido</a></li>
+                        <li><a href="/pages/contacto">Contacto</a></li>
 
                     </ul>
                     <ul>
