--- a/site/views/partials/footer.ejs
+++ b/site/views/partials/footer.ejs
@@ -31,10 +31,10 @@
         <a href="https://www.andreani.com/#!/personas">
           <li>Seguimiento de Envíos</li>
         </a>
-        <a href="">
+        <a href="/pages/preguntas-frecuentes">
           <li>Preguntas Frecuentes</li>
         </a>
-        <a href="">
+        <a href="/pages/contacto">
           <li>Contacto</li>
         </a>
         <a href="https://seguimiento.andreani.com/">
