--- a/site/public/stylesheets/pages/medios.css
+++ b/site/public/stylesheets/pages/medios.css
@@ -111,6 +111,13 @@ font-size: 14px;
 }
 
 
+.error-msg-contact{
+    display: flex;
+    color: red;
+    font-size: 12px;
+      position: relative;
+    top: -12px;}
+
 
 @media (min-width: 768px) {
 
